<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Manager</string>
    <string name="action_settings">Настройки</string>

    <!-- menu -->
    <string name="main">Главная</string>
    <string name="outcome">Расходы</string>
    <string name="income">Доходы</string>
    <string name="categories">Категории</string>
    

    <!-- periods -->
    <string name="choose_period">Выберите период</string>
    <string name="period_current_month">Текущий месяц</string>
    <string name="period_prev_month">Предыдущий месяц</string>
    <string name="period_week">Неделя</string>
    <string name="period_day">День</string>
    <string name="period_user">Пользовательский</string>
    <string name="periodAllTime">Все время</string>
    <string name="periodStart">С</string>
    <string name="periodFinish">По</string>

    
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="ok">ОК</string>
    <string name="paymentsMethods">Способы оплаты</string>
    <string name="paymentMethod">Способ оплаты</string>
    <string name="addPayment">Добавить покупку</string>
    <string name="addPaymentMethod">Добавить способ оплаты</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="enterAmount">Введите сумму</string>
    <string name="enterCategoryOrChooseFromList">Введите категории или выберите из списка</string>
    <string name="showAll">Показать все</string>
    <string name="date">Дата</string>
    <string name="note">Заметка</string>
    <string name="name">Название</string>
    <string name="balance">Баланс</string>
    <string name="remove">Удалить</string>
    <string name="removePaymentMessage">Вы уверены?</string>
    <string name="removePayemntMethodMessage">Вы уверены? Все платежи осуществленные этим методом будут удалены!</string>
    <string name="never">Никогда</string>
    <string name="currenyCurrency">Текущая валюта</string>
    <string name="rate">Курс %s</string>
    <string name="refresh">Обновить</string>
    <string name="color">Цвет</string>
    <string name="lastUsageTime">Последнее использование</string>
    <string name="countUsage">Раз использовано</string>
    <string name="avgSum">Средняя сумма</string>
    <string name="statistic">Отчет по категориям</string>

    <!-- errors -->
    <string name="parseNumberError">Произошла ошибка во время обработки введенного значения</string>
    <string name="emptyPaymentMethods">Отсутсвуют способы оплаты</string>
    <string name="emptyAmount">Введите сумму</string>
    <string name="emptyCategory">Введите хотя бы одну категорию</string>
    <string name="emptyOutcome">Отсутствуют расходы</string>
    <string name="emptyName">Введите название</string>
	<string name="emptyCategories">Отсутствуют категории</string>
    <string name="valueMustBeMoreThenZero">Значение должно быть больше 0</string>
    <string name="selectUsedCurrencies">Выберите хотя бы одну валюту</string>
    <string name="updateRatesError">Произошла ошибка во время обновления курсов валют. Попробуйте повторить позже</string>

    <!-- settings -->
    <string name="settingsCommon">Общие</string>
    <string name="settingCurrentPeriod">Выбранный период</string>
    <string name="settingCategoriesShowCountDefault">Количество показываемых категорий</string>
    <string name="settingCategoriesCount">Количество категорий</string>
    <string name="settingPaymentMethod">Cпособ оплаты</string>
    <string name="settingsExchangeRates">Курсы валют</string>
    <string name="settingsLastTimeUpdate">Последнеее обновление</string>
    <string name="settingsUsedCurrencies">Используемые валюты</string>
    <string name="settingsUpdateCurrencyPeriod">Время обновления</string>
    <string name="settingsPeriodEveryDay">Каждый день</string>
    <string name="settingsPeriodManualy">Вручную</string>

    <!-- settings category -->
    <string name="settingCategoryAddPayment">Добавление платежа</string>
    <string name="settingCategoryCurrency">Валюта</string>

</resources>