<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/addPaymentTitlesStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories" />

    <MultiAutoCompleteTextView
        android:id="@+id/categoriesEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/enterCategoryOrChooseFromList"
        android:paddingTop="10dp"
        android:singleLine="false" />

    <LinearLayout
        android:id="@+id/categoriesLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >
    </LinearLayout>

    <Button
        android:id="@+id/showAllCategoriesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAll" />

</LinearLayout>