<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp" >

        <RadioGroup
            android:id="@+id/periodGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/periodCurrentMonth"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:text="@string/period_current_month"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/periodPrevMonth"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:text="@string/period_prev_month"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/periodWeek"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:text="@string/period_week"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/periodDay"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:text="@string/period_day"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/periodAllTime"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:text="@string/periodAllTime"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <RadioButton
                android:id="@+id/periodUser"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:paddingLeft="40dp"
                android:text="@string/period_user"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <include
                android:id="@+id/chooseDateLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/i_period_date" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />
        </RadioGroup>
    </ScrollView>

    <include
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        layout="@layout/i_save_cancel" />

</RelativeLayout>