<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/i_progress_large"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/field_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/field_margin"
                android:paddingTop="@dimen/field_margin" >

                <TextView
                    style="@style/addPaymentTitlesStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_margin" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/field_margin"
                    android:layout_marginTop="@dimen/field_margin" >

                    <TextView
                        android:id="@+id/colorLabel"
                        style="@style/addPaymentTitlesStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/color" />

                    <View
                        android:id="@+id/color"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:background="@color/blue" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/categoryStatisticLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/field_margin"
                        android:layout_marginTop="@dimen/field_margin" >

                        <TextView
                            style="@style/addPaymentTitlesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/lastUsageTime"
                            android:text="@string/lastUsageTime" />

                        <TextView
                            android:id="@+id/lastUsageTime"
                            style="@style/addPaymentTitlesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textStyle="normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/field_margin"
                        android:layout_marginTop="@dimen/field_margin" >

                        <TextView
                            style="@style/addPaymentTitlesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/countUsage"
                            android:text="@string/countUsage" />

                        <TextView
                            android:id="@+id/countUsage"
                            style="@style/addPaymentTitlesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textStyle="normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/field_margin"
                        android:layout_marginTop="@dimen/field_margin" >

                        <TextView
                            style="@style/addPaymentTitlesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/avgSum"
                            android:text="@string/avgSum" />

                        <TextView
                            android:id="@+id/avgSum"
                            style="@style/addPaymentTitlesStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textStyle="normal" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/saveCancelLayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            layout="@layout/i_save_cancel" />
    </RelativeLayout>

</RelativeLayout>