<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/enterAmount" />

                <Spinner
                    android:id="@+id/currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" >
                </Spinner>
            </LinearLayout>

            <CheckBox
                android:id="@+id/rememberCurrency"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rememberCurrency" />

            <include
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/i_payments_methods_radio_group" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/line_background" />

            <include
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/i_categories" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/line_background" />

            <TextView
                style="@style/addPaymentTitlesStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/date"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7" />

                <TextView
                    android:id="@+id/time"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/line_background" />

            <TextView
                style="@style/addPaymentTitlesStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/note" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/note" />
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        layout="@layout/i_save_cancel" />

</RelativeLayout>